@@ -47,6 +47,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10963: Ensure that subprocess.communicate() never raises EPIPE.
+
 - Issue #11662: Make urllib and urllib2 ignore redirections if the
   scheme is not HTTP, HTTPS or FTP (CVE-2011-1521).
 
